--- a/src/vscp/vscpworks/vscpworks.vcxproj
+++ b/src/vscp/vscpworks/vscpworks.vcxproj
@@ -244,6 +244,7 @@
     <ClInclude Include="..\..\common\crc.h" />
     <ClInclude Include="..\..\common\fastpbkdf2.h" />
     <ClInclude Include="..\..\common\mongoose.h" />
+    <ClInclude Include="..\..\common\sockettcp.h" />
     <ClInclude Include="..\..\common\vscpbase64.h" />
     <ClInclude Include="..\..\common\vscpmd5.h" />
     <ClInclude Include="..\..\common\vscp_aes.h" />
@@ -309,8 +310,8 @@
     <ClCompile Include="..\..\common\crc.c" />
     <ClCompile Include="..\..\common\crc8.c" />
     <ClCompile Include="..\..\common\fastpbkdf2.c" />
-    <ClCompile Include="..\..\common\httpd.c" />
     <ClCompile Include="..\..\common\mongoose.c" />
+    <ClCompile Include="..\..\common\sockettcp.c" />
     <ClCompile Include="..\..\common\sqlite3.c" />
     <ClCompile Include="..\..\common\vscpbase64.c" />
     <ClCompile Include="..\..\common\vscpmd5.c" />
