Test code for sockettcp removed

--- a/src/vscp/helperlib/linux/examples/Makefile
+++ b/src/vscp/helperlib/linux/examples/Makefile
@@ -1,6 +1,8 @@
 
-all:	example1 bigtest
+all:	example1 bigtest stcptest sockettcp.o
 
+sockettcp.o: ../../../../common/sockettcp.c ../../../../common/sockettcp.h
+	$(CC) $(CFLAGS) -c ../../../../common/sockettcp.c -o $@ -I../../../common -I../../../../common
 
 example1:	example1.c
 	cc example1.c -o example1 -I ../.. -I../../../common -I../../../../common -L.. -lvscphelper
@@ -8,6 +10,13 @@ example1:	example1.c
 bigtest:       bigtest.c
 	cc -std=c99 bigtest.c -o bigtest -I../../../common -I../../../../common -L.. -lm -lvscphelper
 
+stcptest:      stcptest.c sockettcp.o
+	cc -std=c99 stcptest.c -o stcptest sockettcp.o -I../../../common -I../../../../common -L.. -lssl -lcrypto  -lm -lvscphelper
+
+
+
 clean:
 	rm example1
 	rm bigtest
+	rm stcptest
+
