Fixed build errors due to missing files

--- a/src/vscp/drivers/level2/logger/linux/Makefile.in
+++ b/src/vscp/drivers/level2/logger/linux/Makefile.in
@@ -73,6 +73,7 @@ VSCPL2LOGGER_OBJECTS =  vscpl2drv_logger.o\
 	log.o\
 	vscpremotetcpif.o\
 	vscphelper.o\
+	sockettcp.o\
 	guid.o\
 	crc.o\
 	crc8.o\
@@ -105,6 +106,9 @@ vscpremotetcpif.o: ../../../../common/vscpremotetcpif.cpp ../../../../common/vsc
 
 vscphelper.o: ../../../../common/vscphelper.cpp ../../../../common/vscphelper.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/vscphelper.cpp -o $@
+
+sockettcp.o: ../../common/sockettcp.c ../../common/sockettcp.h
+	$(CC) $(CFLAGS) -c ../../common/sockettcp.c -o $@
 
 guid.o: ../../../../common/guid.cpp ../../../../common/guid.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/guid.cpp -o $@	
