--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -100,6 +100,7 @@ VSCPD_OBJECTS =  vscpd.o \
 	vscpremotetcpif.o \
 	devicelist.o \
 	mdf.o \
+	sockettcp.o \
 	guid.o \
 	register.o \
 	dllist.o \
@@ -203,6 +204,9 @@ vscpremotetcpif.o: ../../common/vscpremotetcpif.cpp ../../common/vscpremotetcpif
 
 devicelist.o: ../../common/devicelist.cpp ../../common/devicelist.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/devicelist.cpp -o $@
+
+sockettcp.o: ../../common/sockettcp.c ../../common/sockettcp.h
+	$(CC) $(CFLAGS) -c ../../common/sockettcp.c -o $@
 
 guid.o: ../../common/guid.cpp ../../common/guid.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/guid.cpp -o $@
