--- a/src/vscp/vscpcmd/Makefile.in
+++ b/src/vscp/vscpcmd/Makefile.in
@@ -76,6 +76,7 @@ VSCPCMD_OBJECTS =  vscpcmd.o \
 	crc.o \
 	crc8.o \
 	guid.o \
+	sockettcp.o \
 	vscp_aes.o \
 	vscpmd5.o \
 	mongoose.o \
@@ -100,6 +101,9 @@ vscphelper.o: ../common/vscphelper.cpp ../common/vscphelper.h
 
 guid.o: ../common/guid.cpp ../common/guid.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../common/guid.cpp -o $@
+
+sockettcp.o: ../../common/sockettcp.c ../../common/sockettcp.h
+	$(CC) $(CFLAGS) -c ../../common/sockettcp.c -o $@
 
 vscp_aes.o: ../../common/vscp_aes.c ../../common/vscp_aes.h
 	$(CC) $(CFLAGS) -c ../../common/vscp_aes.c -o $@
