--- a/src/vscp/drivers/level2/sim/linux/Makefile.in
+++ b/src/vscp/drivers/level2/sim/linux/Makefile.in
@@ -110,8 +110,8 @@ vscpremotetcpif.o: ../../../../common/vscpremotetcpif.cpp ../../../../common/vsc
 vscphelper.o: ../../../../common/vscphelper.cpp ../../../../common/vscphelper.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/vscphelper.cpp -o $@
 
-sockettcp.o: ../../common/sockettcp.c ../../common/sockettcp.h
-	$(CC) $(CFLAGS) -c ../../common/sockettcp.c -o $@
+sockettcp.o: ../../../../../common/sockettcp.c ../../../../../common/sockettcp.h
+	$(CC) $(CFLAGS) -c ../../../../../common/sockettcp.c -o $@
 
 guid.o: ../../../../common/guid.cpp ../../../../common/guid.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/guid.cpp -o $@	
