Added binaries to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -307,3 +307,7 @@ src/vscp/samples/esp8266/vscp_daemon_connect/vscptest-0x00000.bin
 src/vscp/samples/esp8266/vscp_daemon_connect/vscptest-0x10000.bin
 src/vscp/helperlib/linux/examples/send1
 src/vscp/helperlib/linux/examples/stcptest
+src/vscp/helperlib/linux/examples/send_periodic
+src/vscp/helperlib/linux/examples/simple_tls_client
+src/vscp/helperlib/linux/examples/simple_tls_server
+src/vscp/helperlib/linux/examples/stcp_tls_client
